[package]
name = "brreg-cli"
version = "2023.3.25"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
